[gd_scene load_steps=3 format=3 uid="uid://u216ejsni2bv"]

[ext_resource type="Script" path="res://pages/editor/now_editing_panel/NowEditingPanel.gd" id="1_54jr2"]
[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="2_7a5oo"]

[node name="NowEditingPanel" type="Node2D"]
script = ExtResource("1_54jr2")

[node name="BigPanel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.321569)
offset_left = -5.0
offset_top = 8.0
offset_right = 1915.0
offset_bottom = 1072.0

[node name="MediumPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 1399.0
offset_top = 269.0
offset_right = 1879.0
offset_bottom = 845.0

[node name="SmallPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 1441.0
offset_top = 396.0
offset_right = 1841.0
offset_bottom = 826.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 1441.0
offset_top = 395.0
offset_right = 1849.0
offset_bottom = 757.0
horizontal_scroll_mode = 0

[node name="RowHolder" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="HostButton" type="Button" parent="."]
offset_left = 1455.0
offset_top = 762.0
offset_right = 1619.0
offset_bottom = 814.0
theme = ExtResource("2_7a5oo")
theme_override_font_sizes/font_size = 16
text = "Host"

[node name="JoinQuitButton" type="Button" parent="."]
offset_left = 1644.0
offset_top = 761.0
offset_right = 1813.0
offset_bottom = 813.0
theme = ExtResource("2_7a5oo")
theme_override_font_sizes/font_size = 16
text = "Join"

[node name="RoomLabel" type="Label" parent="."]
offset_left = 1442.0
offset_top = 339.0
offset_right = 1550.0
offset_bottom = 381.0
theme_override_font_sizes/font_size = 30
text = "Room:"
horizontal_alignment = 1

[node name="RoomEdit" type="TextEdit" parent="."]
offset_left = 1545.0
offset_top = 332.0
offset_right = 1837.0
offset_bottom = 383.0
theme = ExtResource("2_7a5oo")
placeholder_text = "Offline"
editable = false

[node name="NowEditingLabel" type="Label" parent="."]
offset_left = 1448.0
offset_top = 294.0
offset_right = 1834.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 30
text = "-- Now Editing --"
horizontal_alignment = 1

[node name="OfflineLabel" type="Label" parent="."]
offset_left = 1447.0
offset_top = 532.0
offset_right = 1833.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 30
text = "-- Host to edit
 together  --"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
